crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::scope_visibility::test_sibling_scopes_not_visible.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::scope_visibility::test_sibling_scopes_not_visible"
---
Fixture: lib::scoping::scope_visibility::test_sibling_scopes_not_visible
============================================================
Source code:

        func test() {
            {
                let first_scope = 1;
            }
            {
                let second_scope = first_scope; // Error: not visible
            }
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'first_scope'
   ╭─[ lib::scoping::scope_visibility::test_sibling_scopes_not_visible:7:36 ]
   │
 7 │                 let second_scope = first_scope; // Error: not visible
   │                                    ─────┬─────  
   │                                         ╰─────── Undeclared variable 'first_scope'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::scope_visibility::test_sibling_scopes_not_visible:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
