crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::undeclared_variables::test_undeclared_in_expression.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::undeclared_variables::test_undeclared_in_expression"
---
Fixture: lib::scoping::undeclared_variables::test_undeclared_in_expression
============================================================
Source code:

        func test() {
            let x = 5;
            let y = x + undefined_var;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ lib::scoping::undeclared_variables::test_undeclared_in_expression:4:25 ]
   │
 4 │             let y = x + undefined_var;
   │                         ──────┬──────  
   │                               ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::undeclared_variables::test_undeclared_in_expression:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
