crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::undeclared_variables::test_undeclared_in_if_condition.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::undeclared_variables::test_undeclared_in_if_condition"
---
Fixture: lib::scoping::undeclared_variables::test_undeclared_in_if_condition
============================================================
Source code:

        func test() {
            if (undefined_condition) {
                let x = 1;
            }
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_condition'
   ╭─[ lib::scoping::undeclared_variables::test_undeclared_in_if_condition:3:17 ]
   │
 3 │             if (undefined_condition) {
   │                 ─────────┬─────────  
   │                          ╰─────────── Undeclared variable 'undefined_condition'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ lib::scoping::undeclared_variables::test_undeclared_in_if_condition:2:14 ]
   │
 2 │         func test() {
   │              ──┬─  
   │                ╰─── Function 'test' doesn't return on all paths
───╯
