crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::unused_variables::test_mixed_used_and_unused.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::unused_variables::test_mixed_used_and_unused"
---
Fixture: lib::scoping::unused_variables::test_mixed_used_and_unused
============================================================
Source code:

        func test() {
            let used = 10;
            let unused = 20;
            return used;
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused'
   ╭─[ lib::scoping::unused_variables::test_mixed_used_and_unused:4:17 ]
   │
 4 │             let unused = 20;
   │                 ───┬──  
   │                    ╰──── Unused variable 'unused'
───╯
