crates/compiler/semantic/tests/snapshots/diagnostics__lib::scoping::unused_variables::test_simple_unused_variable.snap
---
source: crates/compiler/semantic/tests/lib.rs
description: "Inline semantic validation error test: lib::scoping::unused_variables::test_simple_unused_variable"
---
Fixture: lib::scoping::unused_variables::test_simple_unused_variable
============================================================
Source code:

        func test() {
            let unused = 42;
            return ();
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[1002] Warning: Unused variable 'unused'
   ╭─[ lib::scoping::unused_variables::test_simple_unused_variable:3:17 ]
   │
 3 │             let unused = 42;
   │                 ───┬──  
   │                    ╰──── Unused variable 'unused'
───╯
